* Shifts numchannels/oversample/decimation etc from Configuration to Freq
* Allows use of Rule table in input file
* Adds support for LO offsets
* Fix memory leak (need to free baseline array)
* Print all spacecraft entries, not just for the first spacecraft
* Prevent merging of jobs that have incompatible clocks
* Change to polynomial-based clock model (up to 5th order)

2.11
* Post DiFX-1.5
* Implement profile mode (with mode=profile at the global level)
* Add writeDifxLineBoolean and use it for writing TRUE/FALSE values

2.10
* Deallocation option of function DifxBaselineAllocPolProds()
  - needed for more flexible frequency selection in vex2difx
* Consider antenna reordering when concattenating scans
* use same mjd rounding for .calc and .input files
* Version for DiFX-1.5

2.9
* Initial support for calculation of spacecraft positions via SPICE

2.8
* Version bump for slight API change
* padDifxScans added to allow extra non-correlation scans to be inserted

2.7
* Version bump for slight API change
* a few important bug fixes
* Add simplify functions for freqs, datastreams, baselines and configs
* separate out internal deallocation from table destructors and force to 0 deallocated arrays

2.6
* Version bump.  Slight change to internal API.  This version is needed for pulsar
  support in vex2difx.

2.5
* Version bump.  This version required now by vex2difx.

2.4 
* Post NRAO-DiFX 1.1 developments
* Ability to write .calc and .input files
* Mass renaming of .c source files
* Determine nPolar smartly -- don't assume based on config name

2.3
* Support new keywords : ABERRATION CORR (.im) and DIFX VERSION (.calc)
* Fix mapping of autocorrelation frequency ids
* Revamp antenna indexing
* support for different ordering of telescopes in the input files
* make summary versions of printing functions
* make fprintf versions of all printing functions
* This is the version for NRAO-DiFX 1.1

2.2
* partial write support.  So far: delay, uvw, rate and im files

2.1